
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uint32_t ;
typedef int int16_t ;


 int RS ;
 int RS_SIZE ;
 int atoi (char*) ;
 int htons (int) ;
 int inet_addr (char*) ;
 int printf (char*) ;
 int xcode (int ,int ,int ,int) ;

int main(int argc, char *argv[])
{
  uint32_t ip = 0;
  int16_t port = 0;

  if (argc!=3) {
    printf ("\nrs_test <ip> <port>\n");
    return 0;
  }
  ip = inet_addr(argv[1]);
  port = atoi(argv[2]);

  if (port<0 || port>65535) {
    printf ("\ninvalid port specified");
    return 0;
  }
  port = htons(port);


  ip = ~ip;
  port = ~port;

  xcode (RS, RS_SIZE, ip, port);
  return 0;
}
